# bootloader

./: .codespellrc  .editorconfig  .gitignore  .rustfmt.toml  .travis.yml  Cargo.toml  Changelog.md  LICENSE-MIT  Makefile  README.md  _typos.toml  azure-pipelines.yml  bootloader_id_rsa.enc  bors.toml  build.rs  i386-code16-boot-sector.json  i386-code16-stage-2.json  i686-stage-3.json  i686-third-stage.json  i8086-bootloader.json  linker.ld  rust-toolchain.toml  test.json  x86-16bit-second-stage.json  x86_64-bootloader.json  x86_64-stage-4.json
.cargo/: config  config.toml
api/: Cargo.toml  build.rs
api/src/: config.rs  info.rs  lib.rs
bios/: Cargo.toml  build.rs  x86-16bit.json
bios/boot_sector/: 16-bit-linker.ld  Cargo.toml  README.md  boot-sector-link.ld  build.rs
bios/boot_sector/src/: boot.s  dap.rs  error.rs  fail.rs  main.rs  mbr.rs
bios/common/: Cargo.toml
bios/common/src/: lib.rs  racy_cell.rs
bios/first_stage/: 16-bit-linker.ld  Cargo.toml  x86-16bit.json
bios/first_stage/src/: fail.rs  fat.rs  mbr.rs
bios/second_stage/: Cargo.toml  build.rs  second-stage-link.ld
bios/second_stage/src/: boot unreal.s  dap.rs  disk.rs  fat.rs  fat_bpb.rs  main.rs  mbr.rs  mini_fat.rs  protected_mode.rs
bios/src/: main.rs  main_bak.rs  memory_descriptor.rs
bios/src/asm/: e820.s  stage_1.s  stage_3.s  vesa.s
bios/stage-2/: Cargo.toml  build.rs  stage-2-link.ld
bios/stage-2/src/: dap.rs  disk.rs  fat.rs  main.rs  memory_map.rs  protected_mode.rs  screen.rs  vesa.rs
bios/stage-3/: Cargo.toml  build.rs
bios/stage-3/src/: gdt.rs  main.rs  paging.rs  screen.rs  vga_buffer.rs
bios/stage-4/: Cargo.toml  build.rs  stage-4-link.ld
bios/stage-4/src/: main.rs  memory_descriptor.rs  screen.rs  vga_buffer.rs
bios/third_stage/: Cargo.toml  build.rs  third-stage-link.ld
bios/third_stage/src/: main.rs
bootloader-lib/: Cargo.toml
bootloader-lib/src/: lib.rs  load_kernel.rs  logger.rs
builder/: Cargo.toml
common/: Cargo.toml
common/config/: Cargo.toml
common/config/src/: lib.rs
common/src/: config.rs  entropy.rs  framebuffer.rs  gdt.rs  legacy_memory_region.rs  level_4_entries.rs  lib.rs  load_kernel.rs  logger.rs  serial.rs
doc/: chainloading.md
docs/: create-disk-image.md
example-kernel/: Cargo.toml  x86_64-example-kernel.json
examples/: README.md
examples/basic/: Cargo.toml  README.md  basic-os.md  build.rs  rust-toolchain.toml
examples/basic/.cargo/: config.toml
examples/basic/kernel/: Cargo.toml  basic-kernel.md
examples/basic/kernel/src/: main.rs
examples/basic/simple_boot/: Cargo.toml
examples/basic/simple_boot/src/: main.rs
examples/basic/src/: main.rs
examples/test_framework/: Cargo.toml  README.md
examples/test_framework/.cargo/: config.toml
examples/test_framework/boot/: Cargo.toml
examples/test_framework/boot/src/: main.rs
examples/test_framework/src/: main.rs  serial.rs
protected_mode/: Cargo.toml  i686-bootloader.json
real_mode/: .gitignore  Cargo.toml  README.md  build.rs  linker.ld  x86-32bit.json  x86_64-bootloader-real-mode.json  x86_64-bootloader.json
real_mode/.cargo/: config
real_mode/first_stage/: 16-bit-linker.ld  Cargo.toml  x86-16bit.json  x86_64-target.json
real_mode/first_stage/src/: boot.s  dap.rs  fat.rs  lib.rs  main.rs  mbr.rs
real_mode/real_mode/: Cargo.toml
real_mode/real_mode/src/: lib.rs  second_stage.s
real_mode/second_stage/: Cargo.toml
real_mode/src/: boot.s  main.rs  second_stage.s
real_mode/src/bootsector/: Cargo.toml
real_mode/src/bootsector/src/: errors.rs
real_mode/src/shared/src/: console.rs  dap.rs  macros.rs
src/: avx.s  boot.s  boot_info.rs  boot_info_uefi.rs  config.rs  context_switch.s  disk_image.rs  e820.s  fat.rs  file_data_source.rs  frame_allocator.rs  gpt.rs  kernel.s  level4_entries.rs  lib.rs  load_kernel.rs  logger.rs  main.rs  mbr.rs  memory_map.rs  memory_map.s  memory_region.rs  pxe.rs  (+12 more)
src/bootsector/: Cargo.toml
src/bootsector/src/: bootstrap.s  console.rs  errors.rs  lib.rs  main.rs
src/protected/stage_3/: Cargo.toml
src/protected/stage_3/src/: interrupts.rs  iret.s  ivt.rs  lib.rs  v8086_old.rs
src/protected/stage_3/src/v8086/: enter_v8086.s  macros.rs  mod.rs
src/real/stage_2/: Cargo.toml  x86_64-stage_2.json
src/real/stage_2/src/: lib.rs  panic.rs  protected_mode.s  v8086_code.rs
src/shared/: Cargo.toml
src/shared/src/: console.rs  dap.rs  instructions.rs  instructions.s  lib.rs  macros.rs  memory_operations.rs  utils.rs
src/shared/src/console/: mod.rs  vga.rs
src/shared/src/instructions/: assembly.s  mod.rs
src/shared/src/structures/: gdt.rs  idt.rs  mod.rs
src/stage_2/: Cargo.toml  build.rs
src/stage_2/.cargo/: config
src/stage_2/src/: lib.rs  main.rs  panic.rs
tests/runner/: Cargo.toml
tests/runner/src/: lib.rs  main.rs  omvf.rs
tests/test_kernels/: Cargo.toml
tests/test_kernels/.cargo/: config.toml
tests/test_kernels/config_file/: Cargo.toml
tests/test_kernels/default_settings/: Cargo.toml
tests/test_kernels/default_settings/src/: lib.rs
tests/test_kernels/fixed_kernel_address/: Cargo.toml
tests/test_kernels/fixed_kernel_address/src/: lib.rs
tests/test_kernels/higher_half/: Cargo.toml  x86_64-higher_half.json
tests/test_kernels/higher_half/.cargo/: config.toml
tests/test_kernels/higher_half/src/: lib.rs
tests/test_kernels/lower_memory_free/: Cargo.toml
tests/test_kernels/lower_memory_free/src/: lib.rs
tests/test_kernels/lto/: Cargo.toml
tests/test_kernels/lto/src/: lib.rs
tests/test_kernels/map_phys_mem/: Cargo.toml  x86_64-map_phys_mem.json
tests/test_kernels/map_phys_mem/src/: lib.rs
tests/test_kernels/min_stack/: Cargo.toml
tests/test_kernels/pie/: Cargo.toml  x86_64-pie.json
tests/test_kernels/pie/src/: lib.rs
tests/test_kernels/ramdisk/: Cargo.toml
tests/test_kernels/ramdisk/src/: lib.rs
tests/test_kernels/stack_address/: Cargo.toml
tests/test_kernels/stack_address/src/: lib.rs
tests/test_kernels/write_usable_memory/: Cargo.toml
uefi/: Cargo.toml  README.md
uefi/runner/: Cargo.toml
uefi/src/: main.rs  memory_descriptor.rs  portable_acpi.rs
(+106 files in other folders)
