[package]
name = "bootloader_api"
license.workspace = true
version.workspace = true
repository.workspace = true
edition = "2021"
description = "Makes a kernel compatible with the bootloader crate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = "0.24.0"

[dev-dependencies]
rand = "0.8.4"
