[package]
name = "bootloader-lib"
version = "0.1.0"
authors = ["Philipp Oppermann <dev@phil-opp.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xmas-elf = "0.7.0"
x86_64 = "0.11.0"
log = "0.4.8"
spinning_top = "0.1.0"

[dependencies.conquer-once]
version = "0.2.0"
default-features = false

[dependencies.font8x8]
version = "0.2.5"
default-features = false
features = ["unicode"]
