[package]
name = "real_mode"
version = "0.1.0"
authors = ["Philipp Oppermann <dev@phil-opp.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
llvm-tools = "0.1.1"

[profile.release]
opt-level = "s"
lto = true
debug = true
codegen-units = 1
