[package]
name = "bootloader-x86_64-bios-second-stage"
version = "0.1.0"
authors = ["Philipp Oppermann <dev@phil-opp.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mbr-nostd = "0.1.0"
byteorder = { version = "1.4.3", default-features = false }
