[package]
name = "bootloader-x86_64-bios-stage-2"
version = "0.1.0-beta"
authors = ["Philipp Oppermann <dev@phil-opp.com>"]
edition = "2021"
license.workspace = true
repository.workspace = true
description = "Second BIOS stage of the `bootloader` crate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mbr-nostd = "0.1.0"
byteorder = { version = "1.4.3", default-features = false }
bootloader-x86_64-bios-common = { version = "0.1.0-beta", path = "../common" }
