[package]
name = "bootloader-x86_64-bios-stage-3"
version = "0.1.0-beta"
authors = ["Philipp Oppermann <dev@phil-opp.com>"]
edition = "2021"
license.workspace = true
repository.workspace = true
description = "Third BIOS stage of the `bootloader` crate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader-x86_64-bios-common = { version = "0.1.0-beta", path = "../common" }
noto-sans-mono-bitmap = "0.1.5"
