[package]
name = "bootloader-x86_64-bios-stage-4"
version.workspace = true
edition = "2021"
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader_api = { workspace = true }
bootloader-x86_64-common = { workspace = true }
bootloader-x86_64-bios-common = { version = "0.1.0-beta", path = "../common" }
log = "0.4.14"
x86_64 = "0.14.8"
rsdp = "2.0.0"
usize_conversions = "0.2.0"
