[package]
name = "real_mode"
version = "0.1.0"
authors = ["Philipp Oppermann <dev@phil-opp.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "real_mode"
crate-type = ["staticlib"]

[dependencies]


[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
debug = true
