[package]
name = "shared"
version = "0.1.0"
authors = ["Ryland Morgan <ryland.hugo@gmail.com>"]
edition = "2018"

[dependencies]
bitflags = "1.2.1"
bit_field = "0.10.0"
volatile = "0.2"
spin = "0.5"

[dependencies.lazy_static]
version = "1"
features = ["spin_no_std"]

[profile.release]
opt-level = "z"
panic = "abort"
lto = true

[profile.dev]
opt-level = "z"
panic = "abort"
lto = true
debug = true