[package]
name = "stage_2"
version = "0.1.0"
authors = ["Ryland Morgan <ryland.hugo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
v86 = { path = "../v86" }

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[build-dependencies]
llvm-tools = "0.1.1"
