[package]
name = "bootloader_test_runner"
version = "0.1.0"
authors = ["Philipp Oppermann <dev@phil-opp.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = { path = "../.." }
strip-ansi-escapes = "0.1.1"
ovmf-prebuilt = "0.1.0-alpha.1"
paste = "1.0.11"
lazy_static = "1.4.0"
rand = "0.8.5"