[package]
name = "bootloader_test_runner"
version = "0.1.0"
authors = ["Philipp Oppermann <dev@phil-opp.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["bios", "uefi"]
bios = ["bootloader/bios"]
uefi = ["bootloader/uefi"]

[dependencies]
bootloader = { path = "../..", default-features = false }
strip-ansi-escapes = "0.1.1"
ureq = "2.10.1"
sha2 = "0.10.8"
tar = "0.4.41"
lzma-rs = "0.3.0"
tempfile = "3.12.0"
