cargo-features = ["profile-rustflags"]

[workspace]
resolver = "2"
members = [
    "default_settings",
    "map_phys_mem",
    "higher_half",
    "pie",
    "lto",
    "ramdisk",
    "min_stack",
    "lower_memory_free",
    "write_usable_memory",
    "fixed_kernel_address",
]

[profile.release]
panic = "abort"
lto = false
debug = true
overflow-checks = true

[profile.lto]
inherits = "release"
lto = true

[profile.test.package.test_kernel_higher_half]
rustflags = [
    "-C",
    "link-args=--image-base 0xFFFF800000000000",
    "-C",
    "relocation-model=pic",
    "-C",
    "code-model=large",
]

[profile.test.package.test_kernel_min_stack]
opt-level = 2
