[package]
name = "stage_3"
version = "0.1.0"
authors = ["Ryland Morgan <ryland.hugo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "stage_3"
crate-type = ["staticlib"]

[dependencies]
shared = { path = "../../shared" }