[package]
name = "test_kernel_higher_half"
version = "0.1.0"
authors = ["Philipp Oppermann <dev@phil-opp.com>"]
edition = "2018"

[dependencies]
bootloader = { path = "../../.." }
x86_64 = { version = "0.14.7", default-features = false, features = ["instructions", "inline_asm"] }
uart_16550 = "0.2.10"

[package.metadata.bootloader]
dynamic-range-start = "0xffff_8000_0000_0000"
